--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,6 @@ seleniumSafariDriverVersion=3.141.59
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1024M
+systemProp.sonar.host.url=http://localhost:9090
+systemProp.sonar.login=admin
+systemProp.sonar.password=sinensia
